<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="20dp">

        <ImageView
            android:id="@+id/iv_main_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_goneMarginTop="8dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_main_random_worry"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/shape_color_fill_12_rect"
            android:backgroundTint="#338888"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_main_logo">

            <TextView
                android:id="@+id/tv_main_top_worry_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_top_worry_title"
                android:textAppearance="@style/TextAppearance.Pretendard.SubHead2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_main_top_worry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_main_top_worry_title" />

            <TextView
                android:id="@+id/btn_main_watch_worry"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/shape_color_fill_8_rect"
                android:backgroundTint="#838494"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:paddingVertical="8dp"
                android:text="@string/main_top_watch_worry"
                android:textAppearance="@style/TextAppearance.Pretendard.SubHead2"
                android:textColor="@color/gray_12"
                app:layout_constraintTop_toBottomOf="@id/iv_main_top_worry" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_main_worry_collection_box_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/main_worry_collection_title"
            android:textAppearance="@style/TextAppearance.Pretendard.SubHead3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_main_random_worry" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main_worry_collection_box"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_main_worry_collection_box_title"
            tools:listitem="@layout/item_main" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_main_write_worry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>